# github-actions-demo

./: README.md  pyproject.toml
.github/workflows/: test.yml
tests/: test_main.py
